--- a/site/assets/aiom/css_72c4bb64aac65cf3415e9268363d608a_dev.css
+++ b/site/assets/aiom/css_72c4bb64aac65cf3415e9268363d608a_dev.css
@@ -1,4 +1,4 @@
-/** Generated: Wednesday, 1st of August 2018, 03:12:20 PM // Powered by AIOM+ (All In One Minify) created by FlipZoom Media Inc. - David Karich (flipzoom.de) **/
+/** Generated: Thursday, 2nd of August 2018, 09:07:13 AM // Powered by AIOM+ (All In One Minify) created by FlipZoom Media Inc. - David Karich (flipzoom.de) **/
 html,
 body,
 div,
