--- a/site/assets/aiom/css_cfcd208495d565ef66e7dff9f98764da_dev.css
+++ b/site/assets/aiom/css_cfcd208495d565ef66e7dff9f98764da_dev.css
@@ -1,2 +1,2 @@
-/** Generated: Friday, 27th of July 2018, 11:55:35 AM // Powered by AIOM+ (All In One Minify) created by FlipZoom Media Inc. - David Karich (flipzoom.de) **/
+/** Generated: Friday, 3rd of August 2018, 10:51:20 AM // Powered by AIOM+ (All In One Minify) created by FlipZoom Media Inc. - David Karich (flipzoom.de) **/
 
