--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -22,15 +22,15 @@
 
 
 // GLOBAL
-a{
+a {
   text-decoration: none;
 }
 
-body{
+body {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,h2,h3,h4,h5,h6 {
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
 }
@@ -51,12 +51,12 @@ h1,h2,h3,h4,h5,h6{
   }
   &_flex {
     display:flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
-  &_large{
+  &_large {
     max-width: 1920px;
   }
-
 }
 
 
@@ -70,6 +70,29 @@ h1,h2,h3,h4,h5,h6{
     border: 2px solid @color-main-btn;
     text-align: center;
     line-height: 70px;
+    position:relative;
+    &:before {
+      content:"";
+      position:absolute;
+      box-sizing: border-box;
+      top:50%;
+      left:50%;
+      width:28px;
+      height:16px;
+      border-top:2px solid @color-main-btn;
+      border-bottom:2px solid @color-main-btn;
+      transform:translateY(-50%) translateX(-50%);
+    }
+    &:after {
+      content:"";
+      position:absolute;
+      height:2px;
+      width:28px;
+      top:50%;
+      left:50%;
+      background-color:@color-main-btn;
+      transform:translateY(-50%) translateX(-50%);
+    }
   }
 }
 
@@ -83,11 +106,16 @@ h1,h2,h3,h4,h5,h6{
 
 /* MAIN*/
 .aside{
-  width: 30%;
+  box-sizing: border-box;
+  width: 40%;
   padding: 60px;
   padding-bottom: 0;
   text-align: center;
-
+  @media(max-width: 767px) {
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+  }
   &__hello{
     margin: 120px 0 40px 0;
     font-size: 144px;
@@ -112,9 +140,7 @@ h1,h2,h3,h4,h5,h6{
   }
 
   &__btn{
-    width: 260px;
-    height: 80px;
-    display: block;
+    padding:15px 30px;
     margin: 0 auto;
     line-height: 80px;
     border: 2px solid black;
@@ -127,7 +153,10 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .amenities{
-  width: 70%;
+  width: 60%;
+  @media(max-width: 767px) {
+    width:100%;
+  }
   .service-list{
     display: flex;
     flex-wrap: wrap;
@@ -151,9 +180,6 @@ h1,h2,h3,h4,h5,h6{
 
 // MAIN ADAPTIVE
   @media(max-width:980px) {
-  .container_flex{
-    display: block;
-  }
 
   .header{
     width: 100%;
@@ -161,10 +187,7 @@ h1,h2,h3,h4,h5,h6{
     justify-content: space-between;
   }
 
-  .aside{
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
+
 
   .burger{
 
@@ -314,7 +337,7 @@ h1,h2,h3,h4,h5,h6{
 
 // Поставьте нужную ширину!
 @media(max-width:680px){
-  
+
   .brief{
 
   padding: 30px;
@@ -343,7 +366,6 @@ h1,h2,h3,h4,h5,h6{
   .burger_btn{
     width: 50px;
     height: 50px;
-    line-height: 50px;
   }
 
     &__title{
@@ -369,5 +391,3 @@ h1,h2,h3,h4,h5,h6{
 
 
 }
-
-
