--- a/site/templates/src/less/burger.less
+++ b/site/templates/src/less/burger.less
@@ -1,4 +1,5 @@
 .burger {
+  display:block;
   position:relative;
   box-sizing: border-box;
   border:2px solid black;
@@ -6,6 +7,7 @@
   height:70px;
   &:before {
     content:"";
+    position:absolute;
     width:28px;
     height:14px;
     box-sizing: border-box;
@@ -17,11 +19,23 @@
   }
   &:after {
     content:"";
+    position:absolute;
     left:50%;
     top:50%;
     width:28px;
     height:2px;
     background-color:black;
     transform:translate(-50%,-50%);
+  }
+  @media (max-width: 767px) {
+    width:50px;
+    height:50px;
+    &:before {
+      width:20px;
+      height:12px;
+    }
+    &:after {
+      width:20px;
+    }
   }
 }
