--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -28,6 +28,8 @@ a {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  font-size:24px;
+  line-height: 34px;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -42,6 +44,9 @@ h2 {
 }
 h3 {
   font-size: 36px;
+}
+p + p {
+  margin-top:14px;
 }
 
 .container {
