--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -28,8 +28,8 @@ a {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  font-size:24px;
-  line-height: 34px;
+  font-size:18px;
+  line-height: normal;
 }
 
 h1,h2,h3,h4,h5,h6 {
