--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -6,42 +6,96 @@
   }
   &__cell {
     box-sizing: border-box;
-    width:50%;
+    &_left {
+      width:80%;
+      @media(min-width: 1920px) {
+        width:50%;
+      }
+    }
+    &_right {
+      width:20%;
+      @media (min-width: 1920px) {
+        width:50%;
+      }
+    }
   }
 }
 
 .content {
-  padding:60px 60px 170px 60px;
+  padding:60px 60px 150px 60px;
   position:relative;
-  height:100%;
+  height:100vh;
   box-sizing: border-box;
 
   &__heading {
-    margin-top:170px;
+    margin-top:100px;
+    @media(min-width: 1920px) {
+      margin-top:170px;
+    }
   }
   &__text {
-    margin-top:50px;
-    padding-right: 140px;
+    margin-top:30px;
+    margin-bottom:15px;
+    @media(min-width: 1920px) {
+      padding-right: 60px;
+      margin-top:50px;
+      margin-bottom:20px;
+    }
+    li {
+      position:relative;
+      padding-left: 31px;
+      @media (min-width: 1440px) {
+        padding-left: 34px;
+      }
+      &:before {
+        content:"";
+        position:absolute;
+        left:0;
+        top:5px;
+        width:11px;
+        height:11px;
+        background-image: url(../img/checkbox.png);
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        @media (min-width: 1440px) {
+          top:10px;
+          width:14px;
+          height:14px;
+        }
+      }
+    }
+    li + li {
+      margin-top:4px;
+      @media(min-width: 1920px) {
+        margin-top:14px;
+      }
+    }
   }
-  &__fill {
-    display:inline;
+  &__quote {
     background-color:rgba(0, 188, 214, 0.7);
-    margin-left: -4px;
-    margin-right:-4px;
+    margin-left: -6px;
+    margin-right:-6px;
     padding:0 4px;
   }
   &__case {
-    margin-top:20px;
+    margin-top:15px;
     display:inline-block;
     color:#00BCD6;
     border-bottom:2px solid #00BCD6;
+    @media(min-width: 1920px) {
+      margin-top:20px;
+    }
   }
   &__button {
-    margin-top:60px;
+    margin-top:30px;
+    @media(min-width: 1920px) {
+      margin-top:60px;
+    }
   }
   &__items {
     position:absolute;
-    bottom:75px;
+    bottom:60px;
     left:60px;
     right:60px;
     display:flex;
@@ -58,15 +112,15 @@
     font-weight: 300;
     position:relative;
     &_left {
-      padding-left: 60px;
+      padding-left: 40px;
       &:before {
         content:"";
         width:10px;
         position:absolute;
-        left:30px;
+        left:0;
         top:5px;
         bottom:0;
-        transform:translateX(50%) rotate(180deg);
+        transform:rotate(180deg);
         background-image: url(../img/arrow.svg);
         background-position:50% 50%;
         background-size: contain;
@@ -74,15 +128,14 @@
       }
     }
     &_right {
-      padding-right: 60px;
+      padding-right: 40px;
       &:after {
         content:"";
         width:10px;
         position:absolute;
-        right:30px;
+        right:0;
         top:5px;
         bottom:0;
-        transform:translateX(50%);
         background-image: url(../img/arrow.svg);
         background-position:50% 50%;
         background-size: contain;
@@ -93,7 +146,7 @@
 }
 
 .background {
-  min-height: 100vh;
+  height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
