--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -28,8 +28,11 @@ a {
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  font-size:18px;
+  font-size:16px;
   line-height: normal;
+  @media (min-width: 1440px) {
+    font-size:24px;
+  }
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -44,9 +47,6 @@ h2 {
 }
 h3 {
   font-size: 36px;
-}
-p + p {
-  margin-top:14px;
 }
 
 .container {
