home page complete

--- a/site/templates/src/less/template.less
+++ b/site/templates/src/less/template.less
@@ -1,8 +1,10 @@
 // @import "../uikit/less/uikit.less";
 @import "reset.less";
 @import "style.less";
-@import "burger.less";
+
+//@import "lesha.less";
 @import "button.less";
+@import "burger.less";
+@import "main.less";
 @import "header.less";
 @import "service.less";
-//@import "lesha.less";
