--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -38,9 +38,13 @@ body {
 h1,h2,h3,h4,h5,h6 {
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
+  font-weight: 500;
 }
 h1 {
-  font-size: 64px;
+  font-size:48px;
+  @media(min-width: 1920px) {
+    font-size: 64px;
+  }
 }
 h2 {
   font-size: 48px;
