cases almost finish checkpoint

--- a/site/templates/src/less/cases.less
+++ b/site/templates/src/less/cases.less
@@ -1,9 +1,10 @@
 .cases {
   overflow-x:scroll;
-  display:flex;
   &__case {
     box-sizing: border-box;
     width:50%;
+    display:inline-block;
+    float:left;
   }
 }
 
