--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -14,4 +14,10 @@
   &_fixed {
     position:fixed;
   }
+  &_work {
+    padding-left: 40%;
+    @media(min-width: 1440px) {
+      padding-left: 50%;
+    }
+  }
 }
