--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -12,7 +12,7 @@
         width:50%;
       }
     }
-    &_right { 
+    &_right {
       width:20%;
       @media (min-width: 1920px) {
         width:50%;
@@ -37,7 +37,6 @@
 
     font-size:24px;
     margin-top:30px;
-    margin-bottom:15px;
     @media(min-width: 1920px) {
       margin-top:45px;
     }
@@ -89,6 +88,8 @@
     }
   }
   &__quote {
+    display:inline-block;
+    margin-top:15px;
     margin-left: -6px;
     margin-right:-6px;
     padding:0 6px;
