--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -32,9 +32,12 @@
     @media(min-width: 1920px) {
       margin-top:170px;
     }
+    &_white {
+      color:white;
+      text-shadow: 1px 1px black, 1px -1px black, -1px -1px black, -1px 1px black;
+    }
   }
   &__subheading {
-
     font-size:24px;
     margin-top:30px;
     @media(min-width: 1920px) {
