--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -23,4 +23,10 @@
   &_contacts {
     padding-left: 66.6667%;
   }
+  &_about {
+    padding-left:33.3333%;
+    @media(min-width: 1920px) {
+      padding-left: 50%;
+    }
+  }
 }
