--- a/site/templates/src/uikit/less/uikit.less
+++ b/site/templates/src/uikit/less/uikit.less
@@ -39,7 +39,7 @@
 // JavaScript
 @import "core/dropdown.less";
 @import "core/modal.less";
-@import "core/offcanvas.less";
+@import "core/offcanvas.custom.less";
 @import "core/switcher.less";
 
 // Need to be loaded last
