--- a/site/templates/src/uikit/less/core/offcanvas.custom.less
+++ b/site/templates/src/uikit/less/core/offcanvas.custom.less
@@ -33,15 +33,15 @@
   }
 }
 .uk-offcanvas-bar {
-  width: 320px;
+  max-width: 330px;
   position: fixed;
   top: 0;
   bottom: 0;
-  right: 0;
+  left: 0;
   z-index: 10000;
-  background-color: #000;
-  -webkit-transform: translateX(100%);
-  transform: translateX(100%);
+  background-color: white;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
   -webkit-transition: all .4s ease;
   transition: all .4s ease;
   overflow-y: auto;
@@ -57,37 +57,31 @@
   }
 }
 .uk-offcanvas-bar-inner {
-  padding: 30px;
+  padding: 60px;
   > * + * { margin-top: 60px; }
 }
 .uk-offcanvas-close {
   display: block;
-  width: 36px;
-  height: 36px;
+  width: 25px;
+  height: 25px;
   position: absolute;
-  top: 20px;
-  left: 20px;
-  -webkit-transform: rotate(45deg) scale(.8);
-  transform: rotate(45deg) scale(.8);
-  @media(max-width: 639px) { width: 24px; height: 24px; }
+  top: 60px;
+  left: 60px;
+  cursor: pointer;
   &:before, &:after {
-    display: block;
     content: '';
     position: absolute;
-    top: 50%;
-    left: 50%;
-    background-color: #fff;
+    background-color: #000;
+    left:50%;
+    top:50%;
+    transform:translate(-50%,-50%) rotate(45deg);
   }
   &:before {
-    width: 23px;
-    height: 1px;
-    margin-left: -11px;
-    @media(max-width: 639px) { width: 15px; margin-left: -7px; }
+    width: 35px;
+    height: 2px;
   }
   &:after {
-    width: 1px;
-    height: 23px;
-    margin-top: -11px;
-    @media(max-width: 639px) { height: 15px; margin-top: -7px; }
+    width: 2px;
+    height: 35px;
   }
 }
