--- a/site/templates/src/less/sidebar.less
+++ b/site/templates/src/less/sidebar.less
@@ -1,4 +1,7 @@
 .sidebar {
+  box-sizing: border-box;
+  padding: 60px;
+  max-width: 330px;
   &__items {
     margin-top:80px;
     & li+li {
@@ -17,4 +20,16 @@
     text-transform: uppercase;
   }
 
+}
+
+.callback {
+  box-sizing: border-box;
+  padding: 60px;
+  width:680px;
+  max-width: 680px;
+  &__heading {
+    margin-top:80px;
+    color:white;
+    text-shadow: 1px 1px black, 1px -1px black, -1px -1px black, -1px 1px black;
+  }
 }
