--- a/site/templates/src/uikit/less/core/offcanvas.custom.less
+++ b/site/templates/src/uikit/less/core/offcanvas.custom.less
@@ -33,7 +33,7 @@
   }
 }
 .uk-offcanvas-bar {
-  max-width: 330px;
+  //max-width: 330px;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -57,8 +57,7 @@
   }
 }
 .uk-offcanvas-bar-inner {
-  padding: 60px;
-  > * + * { margin-top: 60px; }
+  
 }
 .uk-offcanvas-close {
   display: block;
