--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -1,62 +1,94 @@
-.form {}
-.form__element {
-  position: relative; 
-  padding: 0 0 18px 0;
-  + * { margin-top: 5px; }
-  &_submit { margin-top: 20px; padding: 0; text-align: center; }
+.form {
+  max-width: 450px;
 }
-.form__label {
-  display: block;
-  padding: 4px 0;
-  font-size: 16px;
-  line-height: 16px;
+.form__element {
+  position: relative;
+  &_name { margin-top: 40px; }
+  &_phone { margin-top: 50px; }
+  &_submit { margin-top: 50px;}
 }
 .form__text {
-  margin: 10px 0;
-  font-size: 12px;
-  line-height: 14px;
-  font-weight: 300;
-  color: #fff;
+  margin-top: 20px;
+  font-size: 14px;
+  line-height: 18px;
+  max-width: 425px;
 }
 .form__element {
-  .input {
+  input {
     display: block;
     outline: none;
-    border: 0;
-    font-size: 20px;
-    line-height: 20px;
-    padding: 20px 20px 8px;
+    border: none;
+    border-bottom:2px solid black;
+    border-radius: 0;
+    font-family: "Oswald",arial,sans-serif;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 71px;
+    padding-bottom:15px;
     width: 100%;
-    height: 50px;
     box-sizing: border-box;
-    background-color: rgba(255,255,255,.06);
+    background-color: transparent;
     -webkit-tap-highlight-color: rgba(255,255,255,0);
     -webkit-appearance: none;
-    color: #fff;
+    text-transform: uppercase;
+    color: #000;
     &_outline {
       border: 1px solid transparent;
       border-radius: 4px;
     }
     &.error { border-color: red; }
   }
-  label {
+  .label {
     position: absolute;
     width: 100%;
     height: 52px;
-    padding: 16px 20px;
-    font-size: 18px;
-    font-weight: 300;
-    line-height: 20px;
+    padding-bottom:15px;
+    font-family: "Oswald",arial,sans-serif;
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 71px;
     box-sizing: border-box;
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
+    text-transform: uppercase;
   }
   &.is_focused label,
   &.is_filled label {
-    height: 20px;
-    font-size: 12px;
-    line-height: 12px;
-    padding: 6px 20px 2px;
-    color: #999;
+
+  }
+}
+
+.send {
+  position:relative;
+  display:inline-block;
+  padding-right:60px;
+  &:after {
+    content:"";
+    position:absolute;
+    right:0;
+    top:0;
+    bottom:0;
+    width:30px;
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position: 50% 50%;
+    background-image:url(../img/send.svg);
+    transform:translateY(4px);
+  }
+  &__text {
+    font-family: "Oswald",arial,sans-serif;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+  }
+  &__button {
+    z-index:1;
+    position:absolute;
+    width:100%;
+    left:0;
+    top:0;
+    bottom:0;
+    opacity:0;
+    cursor:pointer;
   }
 }
