--- a/site/templates/src/less/sidebar.less
+++ b/site/templates/src/less/sidebar.less
@@ -32,4 +32,7 @@
     color:white;
     text-shadow: 1px 1px black, 1px -1px black, -1px -1px black, -1px 1px black;
   }
+  &__form {
+    margin-top:30px;
+  }
 }
