--- a/site/templates/src/less/about.less
+++ b/site/templates/src/less/about.less
@@ -77,7 +77,7 @@
 .customer {
   height:250px;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: 50% 50%;
   position:relative;
   &__link {
