--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -101,9 +101,9 @@
     }
     &_case {
       background-color:rgba(253, 77, 79, 0.7);
-      margin-left: -1px;
-      margin-right:-1px;
-      padding:0 1px;
+      padding:0px;
+      margin-left: 0px;
+      margin-right: 0px;
     }
   }
   &__case {
