--- a/site/templates/src/less/work.less
+++ b/site/templates/src/less/work.less
@@ -21,6 +21,9 @@
   &__pyramid {
     background-color:#FD4D4F;
   }
+  &__accordion {
+    margin-top:15px;
+  }
 }
 
 .pyramid {
@@ -88,5 +91,5 @@
 }
 
 .scheme {
-  
+
 }
