work and chetotam esche checkpoint

--- a/site/templates/src/less/main.less
+++ b/site/templates/src/less/main.less
@@ -80,6 +80,7 @@
   }
   &__link {
     position:absolute;
+    z-index:1;
     left:0;
     right:0;
     top:0;
@@ -89,6 +90,7 @@
     position:absolute;
     left:0;
     bottom:0;
+    box-sizing: border-box;
     width:350px;
     max-width: 100%;
     padding:20px;
