--- a/site/templates/src/uikit/less/components/accordion.custom.less
+++ b/site/templates/src/uikit/less/components/accordion.custom.less
@@ -54,6 +54,10 @@
     color:white;
     text-shadow: 1px 1px black, 1px -1px black, -1px -1px black, -1px 1px black;
     cursor: pointer;
+    @media(min-width: 1440px) {
+      font-size:24px;
+      line-height:30px;
+    }
     &.uk-active {
       color:black;
       text-shadow: none;
