--- a/site/templates/src/less/case.less
+++ b/site/templates/src/less/case.less
@@ -1,4 +1,5 @@
 @motul-gray:rgb(27,27,27);
+@gray:rgb(232,232,232);
 
 .case {
 
@@ -9,11 +10,36 @@
   &__cell {
     box-sizing: border-box;
     width:50%;
+    @media(max-width: 959px) {
+      width:100%;
+    }
+    &_big {
+      width:100%;
+    }
     &_text {
       padding:90px;
-      *+* {
+      &>*+* {
         margin-top:30px;
       }
+    }
+    &_text-center {
+      text-align: center;
+    }
+    &_shadow-bottom {
+      position:relative;
+      &:after {
+        content:"";
+        position:absolute;
+        height:20px;
+        left:0;
+        right:0;
+        bottom:0;
+        background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.05));
+      }
+    }
+    &_motul-light {
+      background-color:white;
+      color:@motul-gray;
     }
     &_motul-dark {
       background-color:@motul-gray;
@@ -23,5 +49,41 @@
   &__img {
     width: 100%;
     display:block;
+  }
+}
+
+.adaptive-block {
+  padding:90px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background-color:@gray;
+  &__img {
+    max-height:370px;
+    display:inline-block;
+  }
+}
+
+.indicators {
+  text-align: center;
+  &__grid {
+    display:flex;
+    flex-wrap: wrap;
+    width:400px;
+    margin-left:auto;
+    margin-right:auto;
+    justify-content: center;
+  }
+  &__cell {
+    padding:15px;
+    box-sizing: border-box;
+    width:50%;
+  }
+  &__value {
+    color:red;
+    font-weight: bold;
+  }
+  &__text {
+    
   }
 }
