--- a/site/templates/src/less/case.less
+++ b/site/templates/src/less/case.less
@@ -17,7 +17,7 @@
       width:100%;
     }
     &_text {
-      padding:90px;
+      padding:90px 60px;
       &>*+* {
         margin-top:30px;
       }
@@ -53,14 +53,53 @@
 }
 
 .adaptive-block {
-  padding:90px;
   display:flex;
   justify-content: center;
   align-items: center;
   background-color:@gray;
+  padding:90px;
   &__img {
     max-height:370px;
     display:inline-block;
+  }
+}
+.adaptive-grid {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  &__cell {
+    box-sizing: border-box;
+
+    position:relative;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding:0 15px;
+    &.active:after {
+      content:"";
+      position: absolute;
+      bottom:0;
+      left:50%;
+      right:5px;
+      height:4px;
+      width:60px;
+      background-color:#989898;
+      transform:translateY(15px) translateX(-50%);
+    }
+  }
+  &__image {
+    width:100%;
+    height:100px;
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position: 50% 50%;
+  }
+  &__name {
+    color:#989898;
+  }
+  &__text {
+    margin-top:110px;
+    color:#989898;
   }
 }
 
@@ -69,7 +108,7 @@
   &__grid {
     display:flex;
     flex-wrap: wrap;
-    width:400px;
+    max-width:400px;
     margin-left:auto;
     margin-right:auto;
     justify-content: center;
@@ -84,6 +123,6 @@
     font-weight: bold;
   }
   &__text {
-    
+
   }
 }
