checkpoint before brief making

--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -26,6 +26,9 @@
   position:relative;
   height:100vh;
   box-sizing: border-box;
+  @media(max-width: 1023px) {
+    height:auto;
+  }
 
   &__heading {
     margin-top:100px;
