--- a/site/templates/src/less/main.less
+++ b/site/templates/src/less/main.less
@@ -14,11 +14,17 @@
       @media(min-width: 1920px) {
         width:33.3333%;
       }
+      @media(max-width: 1023px) {
+        width:100%;
+      }
     }
     &_right {
       width:50%;
       @media(min-width: 1920px) {
         width:66.6667%;
+      }
+      @media(max-width: 1023px) {
+        width:100%;
       }
     }
   }
@@ -30,6 +36,9 @@
   flex-wrap: wrap;
   text-align: center;
   justify-content: center;
+  @media(max-width: 1023px) {
+    padding:120px;
+  }
   &__hello {
     margin-top:70px;
     font-size: 144px;
@@ -39,6 +48,9 @@
     text-shadow: 1px 1px black, 1px -1px black, -1px -1px black, -1px 1px black;
     @media(min-width: 1440px) {
       margin-top: 120px;
+    }
+    @media(max-width: 1023px) {
+      display:none;
     }
   }
   &__name{
@@ -60,6 +72,9 @@
     margin-top: 60px;
     @media(min-width: 1440px) {
       margin-top:170px;
+    }
+    @media(max-width: 1023px) {
+      display:none;
     }
   }
 }
