--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -1,11 +1,60 @@
 .form {
   max-width: 450px;
+  &_brief {
+    max-width: 100%;
+  }
 }
 .form__element {
   position: relative;
   &_name { margin-top: 40px; }
   &_phone { margin-top: 50px; }
   &_submit { margin-top: 50px;}
+}
+.form__radio {
+  &+* {
+    margin-top: 14px;
+  }
+  input {
+    position: absolute;
+    width: 0;
+    opacity: 0;
+  }
+  input + label {
+    padding: 0 0 0 40px;
+    position: relative;
+    font-size:24px;
+    line-height: 30px;
+  }
+  input + label:before {
+    content:"";
+    position:absolute;
+    height:17px;
+    width:17px;
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position: 50% 50%;
+    background-image:url(../img/box.svg);
+    left:0;
+    bottom:3px;
+  }
+  input:not(:checked) + label {
+
+  }
+  input:checked + label {
+    font-weight: 600;
+    &:after {
+      content:"";
+      position:absolute;
+      height:14px;
+      width:14px;
+      background-repeat: no-repeat;
+      background-size:contain;
+      background-position: 50% 50%;
+      background-image:url(../img/check.svg);
+      left:4px;
+      bottom:8px;
+    }
+  }
 }
 .form__text {
   margin-top: 20px;
@@ -32,6 +81,9 @@
     -webkit-appearance: none;
     text-transform: uppercase;
     color: #000;
+    & .error {
+      border-color:red;
+    }
     &_outline {
       border: 1px solid transparent;
       border-radius: 4px;
@@ -90,5 +142,28 @@
     bottom:0;
     opacity:0;
     cursor:pointer;
+  }
+}
+
+.submit {
+  display:inline-block;
+  font-family: "Oswald",arial,sans-serif;
+  font-size:24px;
+  line-height:36px;
+  font-weight: 300;
+  cursor:pointer;
+  padding-right:40px;
+  position:relative;
+  &:after {
+    content:"";
+    position:absolute;
+    height:17px;
+    top:12px;
+    width:9px;
+    background-repeat: no-repeat;
+    background-position:  50% 50%;
+    background-size:contain;
+    background-image:url(../img/vector.svg);
+    right:0;
   }
 }
