--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -1,7 +1,68 @@
 .form {
   max-width: 450px;
+  &_big {
+    max-width: 600px;
+  }
+  & .form__element_brief + .form__element_brief {
+    margin-top:40px;
+  }
+}
+.form__textarea {
+  position: relative;
+  textarea {
+    display: block;
+    outline: none;
+    border: none;
+    border-bottom:2px solid #747474;
+    border-radius: 0;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 30px;
+    padding-bottom:5px;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: transparent;
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
+    -webkit-appearance: none;
+    color: #747474;
+    & .error {
+      border-color:red;
+    }
+    &_outline {
+      border: 1px solid transparent;
+      border-radius: 4px;
+    }
+    &.error { border-color: red; }
+  }
   &_brief {
-    max-width: 100%;
+    textarea {
+      border-color:#747474;
+      color:#747474;
+    }
+    .label {
+      color:#747474;
+    }
+  }
+  &.error {
+    textarea {
+      border-color:red;
+    }
+  }
+  .label {
+    position: absolute;
+    width: 100%;
+    height: 52px;
+    padding-bottom:5px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 30px;
+    box-sizing: border-box;
+    -webkit-transition: all .2s ease;
+    transition: all .2s ease;
+  }
+  &.is_focused textarea,
+  &.is_filled textarea {
+
   }
 }
 .form__element {
@@ -89,6 +150,20 @@
       border-radius: 4px;
     }
     &.error { border-color: red; }
+  }
+  &_brief {
+    input {
+      border-color:#747474;
+      color:#747474;
+    }
+    .label {
+      color:#747474;
+    }
+  }
+  &.error {
+    input {
+      border-color:red;
+    }
   }
   .label {
     position: absolute;
