-content__quote_content,site,context,crm,target,brand -content__case_content,site,context,crm,target,brand

--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -99,9 +99,26 @@
     margin-left: -6px;
     margin-right:-6px;
     padding:0 6px;
-    &_site {
-      background-color:rgba(0, 188, 214, 0.7);
+
+    &_content {
+      background-color:rgba(255, 65, 65, 0.7);
     }
+    &_site {
+      background-color:rgba(23,154,184, 0.7);
+    }
+    &_context {
+      background-color:rgba(231, 195, 35, 0.7);
+    }
+    &_crm {
+      background-color:rgba(75, 211, 201, 0.7);
+    }
+    &_target {
+      background-color:rgba(149, 97, 50, 0.7);
+    }
+    &_brand {
+      background-color:rgba(142, 45, 212, 0.7);
+    }
+
     &_case {
       background-color:rgba(253, 77, 79, 0.7);
       padding:0px;
@@ -112,11 +129,30 @@
   &__case {
     margin-top:15px;
     display:inline-block;
-    color:#00BCD6;
     border-bottom:2px solid #00BCD6;
     @media(min-width: 1920px) {
       margin-top:20px;
     }
+
+    &_content {
+      color:rgb(255, 65, 65);
+    }
+    &_site {
+      color:rgb(23,154,184);
+    }
+    &_context {
+      color:rgb(231, 195, 35);
+    }
+    &_crm {
+      color:rgb(75, 211, 201);
+    }
+    &_target {
+      color:rgb(149, 97, 50);
+    }
+    &_brand {
+      color:rgb(142, 45, 212);
+    }
+
   }
   &__button {
     margin-top:30px;
