--- a/site/templates/src/less/case.less
+++ b/site/templates/src/less/case.less
@@ -69,7 +69,7 @@
   justify-content: center;
   &__cell {
     box-sizing: border-box;
-
+    width:33.3333%;
     position:relative;
     display:flex;
     flex-wrap: wrap;
@@ -88,11 +88,18 @@
     }
   }
   &__image {
+    text-align: center;
+    color:#989898;
+    font-family:"icomoon";
+    font-size:120px;
     width:100%;
-    height:100px;
-    background-repeat: no-repeat;
-    background-size:contain;
-    background-position: 50% 50%;
+    position:relative;
+    &:before {
+      width:100%;
+    }
+    &_laptop:before { content: "\e901"; width:100%; }
+    &_tablet:before { content: "\e902"; width:100%; }
+    &_phone:before { content: "\e900"; width:100%; }
   }
   &__name {
     color:#989898;
