--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -11,17 +11,18 @@
 @color-brief-text: #747474;
 @color-brief-submit: #7F8B8A;
 
-
-
-
-// HOME ADAPTIVE
-
-
-
-
-
-
 // GLOBAL
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?vqgf3a');
+  src:  url('../fonts/icomoon.eot?vqgf3a#iefix') format('embedded-opentype'),
+  url('../fonts/icomoon.ttf?vqgf3a') format('truetype'),
+  url('../fonts/icomoon.woff?vqgf3a') format('woff'),
+  url('../fonts/icomoon.svg?vqgf3a#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 a {
   text-decoration: none;
   color:black;
