--- a/site/templates/src/less/main.less
+++ b/site/templates/src/less/main.less
@@ -1,3 +1,7 @@
+.disabled {
+  display:none;
+}
+
 .layout{
   display: none;
 }
@@ -84,6 +88,8 @@
   &__grid {
     display:flex;
     flex-wrap: wrap;
+    overflow-y: scroll;
+    height:100vh;
   }
   &__cell {
     height:310px;
