--- a/site/templates/src/less/main.less
+++ b/site/templates/src/less/main.less
@@ -7,6 +7,16 @@
     display:flex;
     flex-wrap: wrap;
   }
+  &__fixed-cell {
+    position:fixed;
+    width:50%;
+    @media(min-width: 1920px) {
+      width:33.3333%;
+    }
+    @media(max-width: 1023px) {
+      width:100%;
+    }
+  }
   &__cell {
     box-sizing: border-box;
     &_left {
@@ -111,4 +121,8 @@
     padding:20px;
     color:white;
   }
+}
+
+.disabled {
+  display:none;
 }
