--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -4,7 +4,7 @@
   position:absolute;
   top:0;
   left:0;
-  right:0;
+  right:50%;
   padding:60px 60px 0 60px;
   @media(max-width:767px) {
     padding:20px 20px 0 20px;
@@ -15,15 +15,18 @@
   }
   &_work {
     left:40%;
+    right:0;
     @media(min-width: 1440px) {
       left: 50%;
     }
   }
   &_contacts {
     left: 66.6667%;
+    right:0;
   }
   &_about {
     left:33.3333%;
+    right:0;
     @media(min-width: 1920px) {
       left: 50%;
     }
