--- a/site/templates/src/less/case.less
+++ b/site/templates/src/less/case.less
@@ -45,6 +45,10 @@
     &_free-lands {
       background-color:@gray;
     }
+    &_kibbler {
+      background-color:#1f1f1f;
+      color:white;
+    }
   }
   &__img {
     width: 100%;
