--- a/site/templates/src/less/case.less
+++ b/site/templates/src/less/case.less
@@ -49,6 +49,10 @@
       background-color:#1f1f1f;
       color:white;
     }
+    &_ff {
+      color:white;
+      background-color:#86287c;
+    }
   }
   &__img {
     width: 100%;
@@ -124,6 +128,9 @@
   &__value {
     color:red;
     font-weight: bold;
+    &_black {
+      color:inherit;
+    }
   }
   &__text {
 
