--- a/site/templates/src/less/cases.less
+++ b/site/templates/src/less/cases.less
@@ -1,6 +1,5 @@
 .cases {
   height:100vh;
-  overflow-x:scroll;
   display:flex;
   &__case {
     box-sizing: border-box;
@@ -11,8 +10,7 @@
 
 .case-block {
   position:relative;
-  height:100%;
-  width:50%;
+  height:100vh;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
