--- a/site/templates/src/less/brief.less
+++ b/site/templates/src/less/brief.less
@@ -10,6 +10,9 @@
     }
     &_right {
       width:33.3333%;
+      position:fixed;
+      left:66.6667%;
+      height:100vh;
       background-repeat: no-repeat;
       background-size: cover;
       background-position: 50% 50%;
