--- a/site/templates/src/less/main.less
+++ b/site/templates/src/less/main.less
@@ -21,6 +21,9 @@
     box-sizing: border-box;
     &_left {
       width:50%;
+      background-color:#fff;
+      position:relative;
+      z-index:100;
       @media(min-width: 1920px) {
         width:33.3333%;
       }
