--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -9,6 +9,7 @@
   @media(max-width:767px) {
     padding:20px 20px 0 20px;
     justify-content: flex-end;
+    right:0;
   }
   &_fixed {
     position:fixed;
