--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -31,5 +31,9 @@
     @media(min-width: 1920px) {
       left: 50%;
     }
+    @media(max-width: 1023px) {
+      left:0;
+      position:fixed;
+    }
   }
 }
