--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -22,6 +22,9 @@
   @media(max-width: 1023px) {
     height:auto;
   }
+  @media(max-width: 767px) {
+    padding:60px 20px;
+  }
   &_fixed {
     width:50%;
     position:fixed;
@@ -98,19 +101,19 @@
     padding:0 6px;
 
     &_content {
-      background-color:rgba(255, 65, 65, 0.7);
+      background-color:rgb(255, 124, 124);
     }
     &_site {
-      background-color:rgba(23,154,184, 0.7);
+      background-color:rgba(100,234,255, 1);
     }
     &_context {
-      background-color:rgba(231, 195, 35, 0.7);
+      background-color:rgba(255, 208, 0, 0.7);
     }
     &_crm {
-      background-color:rgba(75, 211, 201, 0.7);
+      background-color:rgba(61, 243, 229, 0.7);
     }
     &_target {
-      background-color:rgba(149, 97, 50, 0.7);
+      background-color:rgba(255, 167, 60, 1);
     }
     &_brand {
       background-color:rgba(142, 45, 212, 0.7);
@@ -132,24 +135,24 @@
     }
 
     &_content {
-      color:rgb(255, 65, 65);
-      border-color:rgb(255, 65, 65);
+      color:rgb(255, 124, 124);
+      border-color:rgb(255, 124, 124);
     }
     &_site {
-      color:rgb(23,154,184);
-      border-color:rgb(23,154,184);
+      color:rgba(100,234,255, 1);
+      border-color:rgba(100,234,255, 1);
     }
     &_context {
-      color:rgb(231, 195, 35);
-      border-color:rgb(231, 195, 35);
+      color:rgba(255, 208, 0, 1);
+      border-color:rgba(255, 208, 0, 1);
     }
     &_crm {
-      color:rgb(75, 211, 201);
-      border-color:rgb(75, 211, 201);
+      color:rgba(61, 243, 229, 1);
+      border-color:rgba(61, 243, 229, 1);
     }
     &_target {
-      color:rgb(149, 97, 50);
-      border-color:rgb(149, 97, 50);
+      color:rgba(255, 167, 60, 1);
+      border-color:rgba(255, 167, 60, 1);
     }
     &_brand {
       color:rgb(142, 45, 212);
