--- a/site/templates/src/less/about.less
+++ b/site/templates/src/less/about.less
@@ -10,11 +10,21 @@
       @media(min-width: 1920px) {
         width:50%;
       }
+      @media(max-width: 1023px) {
+        width:100%;
+        order:1;
+      }
+      @media(max-width: 767px) {
+        order:0;
+      }
     }
     &_right {
       width:66.6667%;
       @media(min-width: 1920px) {
         width:50%;
+      }
+      @media(max-width: 1023px) {
+        width:100%;
       }
     }
   }
@@ -29,6 +39,9 @@
     margin-top:150px;
     @media(min-width: 1920px) {
       margin-top:170px;
+    }
+    @media(max-width: 767px) {
+      margin-top:0;
     }
   }
   &__item {
@@ -48,11 +61,18 @@
     @media(min-width: 1440px) {
       font-size:48px;
     }
+    @media(max-width: 767px) {
+      width:100%;
+    }
   }
   &__text {
     width:60%;
     box-sizing: border-box;
     line-height: 1.5;
+    @media(max-width: 767px) {
+      width:100%;
+      margin-top:15px;
+    }
   }
 }
 
@@ -64,14 +84,23 @@
       padding-bottom:100px;
       padding-top:200px
     }
+    @media(max-width: 767px) {
+      padding:60px 20px;
+      text-align: left;
+    }
   }
   &__grid {
     display:flex;
     flex-wrap:wrap;
+    justify-content: center;
+    align-items: center;
   }
   &__cell {
     box-sizing: border-box;
     width:33.3333%;
+    @media(max-width: 767px) {
+      width:50%;
+    }
   }
 }
 .customer {
