--- a/site/templates/src/less/main.less
+++ b/site/templates/src/less/main.less
@@ -50,7 +50,10 @@
   text-align: center;
   justify-content: center;
   @media(max-width: 1023px) {
-    padding:120px;
+    padding:120px 60px;
+  }
+  @media(max-width: 767px) {
+    padding:60px 20px;
   }
   &__hello {
     margin-top:70px;
@@ -105,6 +108,9 @@
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size:cover;
+    @media(max-width: 767px) {
+      width:100%;
+    }
   }
   &__link {
     position:absolute;
