--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -20,6 +20,9 @@
     @media(min-width: 1440px) {
       left: 50%;
     }
+    @media(max-width: 1023px) {
+      left:0;
+    }
   }
   &_contacts {
     left: 66.6667%;
