--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -35,6 +35,9 @@
     @media(min-width: 1920px) {
       margin-top:170px;
     }
+    @media(max-width: 1023px) {
+      margin-top:60px;
+    }
     &_white {
       color:white;
       text-shadow: 1px 1px black, 1px -1px black, -1px -1px black, -1px 1px black;
