--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -8,9 +8,15 @@
     box-sizing: border-box;
     &_left {
       width:50%;
+      @media(max-width: 1023px) {
+        width:100%;
+      }
     }
     &_right {
       width:50%;
+      @media(max-width: 1023px) {
+        width:100%;
+      }
     }
   }
 }
@@ -36,6 +42,9 @@
       margin-top:170px;
     }
     @media(max-width: 1023px) {
+      margin-top:90px;
+    }
+    @media(max-width: 767px) {
       margin-top:60px;
     }
     &_white {
@@ -229,4 +238,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
+  @media(max-width:1023px) {
+    position:relative;
+    left:0;
+    width:100%;
+  }
 }
