--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -50,9 +50,15 @@ h1 {
   @media(min-width: 1920px) {
     font-size: 64px;
   }
+  @media(max-width: 767px) {
+    font-size:36px;
+  }
 }
 h2 {
   font-size: 48px;
+  @media(max-width: 767px) {
+    font-size:36px;
+  }
 }
 h3 {
   font-size: 36px;
