--- a/site/templates/src/less/sidebar.less
+++ b/site/templates/src/less/sidebar.less
@@ -8,7 +8,7 @@
       margin-top:20px;
     }
     &_contacts {
-      margin-top:130px;
+      margin-top:60px;
     }
   }
   &__item {
@@ -19,18 +19,19 @@
     color:black;
     text-transform: uppercase;
   }
+  &__callback {
+    margin-top:60px;
+  }
 
 }
 
 .callback {
   box-sizing: border-box;
-  padding: 60px;
-  width:680px;
-  max-width: 680px;
   &__heading {
-    margin-top:80px;
     color:white;
     text-shadow: 1px 1px black, 1px -1px black, -1px -1px black, -1px 1px black;
+    font-size:18px;
+    line-height: 27px;
   }
   &__form {
     margin-top:30px;
