--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -51,7 +51,6 @@
   .label {
     position: absolute;
     width: 100%;
-    height: 52px;
     padding-bottom:5px;
     font-weight: 500;
     font-size: 24px;
@@ -67,9 +66,9 @@
 }
 .form__element {
   position: relative;
-  &_name { margin-top: 40px; }
-  &_phone { margin-top: 50px; }
-  &_submit { margin-top: 50px;}
+  &_name { margin-top: 20px; }
+  &_phone { margin-top: 20px; }
+  &_submit { margin-top: 20px;}
 }
 .form__radio {
   &+* {
@@ -182,6 +181,14 @@
   &.is_focused label,
   &.is_filled label {
 
+  }
+}
+
+.form__element_name,.form__element_phone {
+  .label,input {
+    font-size:18px;
+    line-height: 27px;
+    padding-bottom:5px;
   }
 }
 
