accordion + input fix

--- a/site/templates/src/less/contacts.less
+++ b/site/templates/src/less/contacts.less
@@ -13,6 +13,10 @@
     }
   }
   &__image {
+    position:fixed;
+    left:0;
+    top:0;
+    width:66.6667%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
