--- a/site/templates/src/uikit/less/components/accordion.custom.less
+++ b/site/templates/src/uikit/less/components/accordion.custom.less
@@ -62,6 +62,10 @@
       color:black;
       text-shadow: none;
     }
+    &:hover {
+      color:black;
+      text-shadow: none;
+    }
     .hook-accordion-title;
 }
 
