--- a/site/templates/src/less/brief.less
+++ b/site/templates/src/less/brief.less
@@ -24,6 +24,10 @@
       font-size:36px;
       line-height: 48px;
     }
+    @media(max-width: 767px) {
+      font-size:24px;
+      line-height: 32px;
+    }
   }
   &__form {
     margin-top:30px;
