--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -25,6 +25,10 @@
     -webkit-tap-highlight-color: rgba(255,255,255,0);
     -webkit-appearance: none;
     color: #747474;
+    @media(max-width: 767px) {
+      font-size:18px;
+      line-height: 27px;
+    }
     & .error {
       border-color:red;
     }
@@ -58,6 +62,10 @@
     box-sizing: border-box;
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
+    @media(max-width: 767px) {
+      font-size:18px;
+      line-height: 27px;
+    }
   }
   &.is_focused textarea,
   &.is_filled textarea {
@@ -95,7 +103,7 @@
     background-position: 50% 50%;
     background-image:url(../img/box.svg);
     left:0;
-    bottom:3px;
+    top:8px;
   }
   input:not(:checked) + label {
 
@@ -112,7 +120,7 @@
       background-position: 50% 50%;
       background-image:url(../img/check.svg);
       left:4px;
-      bottom:8px;
+      top:5px;
     }
   }
 }
@@ -183,7 +191,15 @@
 
   }
 }
-
+.form__element_brief {
+  .label,input {
+    @media(max-width: 767px) {
+      font-size:18px;
+      line-height: 27px;
+      padding-bottom:5px;
+    }
+  }
+}
 .form__element_name,.form__element_phone {
   .label,input {
     font-size:18px;
