--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -22,7 +22,10 @@
   font-weight: normal;
   font-style: normal;
 }
-
+//HACKKKK
+body {
+  overflow-y: scroll;
+}
 strong {
   font-weight: 700;
 }
