--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -67,9 +67,9 @@
       line-height: 27px;
     }
   }
-  &.is_focused textarea,
-  &.is_filled textarea {
-
+  &.is_focused label,
+  &.is_filled label {
+    transform:translate(-50%,-50%) scale(0.5) translate(50%,5%);
   }
 }
 .form__element {
@@ -175,7 +175,6 @@
   .label {
     position: absolute;
     width: 100%;
-    height: 52px;
     padding-bottom:15px;
     font-family: "Oswald",arial,sans-serif;
     font-weight: 500;
@@ -188,7 +187,7 @@
   }
   &.is_focused label,
   &.is_filled label {
-
+    transform:translate(-50%,-50%) scale(0.5) translate(50%,5%);
   }
 }
 .form__element_brief {
