--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -69,7 +69,8 @@
   }
   &.is_focused label,
   &.is_filled label {
-    transform:translate(-50%,-50%) scale(0.5) translate(50%,5%);
+    font-size:10px;
+    top:-15px;
   }
 }
 .form__element {
@@ -187,7 +188,8 @@
   }
   &.is_focused label,
   &.is_filled label {
-    transform:translate(-50%,-50%) scale(0.5) translate(50%,5%);
+    font-size:10px;
+    top:-15px;
   }
 }
 .form__element_brief {
