--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -27,6 +27,10 @@
   &_contacts {
     left: 66.6667%;
     right:0;
+    @media(max-width: 1023px) {
+      left:0;
+      right:0;
+    }
   }
   &_about {
     left:33.3333%;
