--- a/site/templates/src/less/proposal.less
+++ b/site/templates/src/less/proposal.less
@@ -7,16 +7,30 @@
     box-sizing: border-box;
     &_left {
       width:50%;
+      @media(max-width: 1023px) {
+        width:100%;
+      }
     }
     &_right {
       width:50%;
-
+      @media(max-width: 1023px) {
+        width:100%;
+      }
     }
   }
   &__image {
+    position:fixed;
+    left:50%;
+    top:0;
+    width:50%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
     height:100vh;
+    @media(max-width: 1023px) {
+      position:relative;
+      width:100%;
+      left:0;
+    }
   }
 }
