--- a/site/templates/src/less/contacts.less
+++ b/site/templates/src/less/contacts.less
@@ -58,4 +58,47 @@
       font-size:24px;
     }
   }
+  &__socials {
+    margin-top:15px;
+  }
+}
+
+.socials {
+  display:flex;
+  margin-left: -15px;
+  &__icon {
+    display:inline-block;
+    margin-left: 15px;
+    height:40px;
+    width:40px;
+    background-color:black;
+    border-radius: 50%;
+    position:relative;
+    &:before {
+      color:white;
+      position:absolute;
+      font-family: "FontAwesome";
+      font-size:20px;
+      line-height:20px;
+      top:50%;
+      left:50%;
+      transform:translate(-50%,-50%);
+    }
+    &_vk:before {
+      content:"\f189";
+    }
+    &_inst:before {
+      content:"\f16d";
+    }
+    &_fb:before {
+      content:"\f09a";
+    }
+  }
+  &__link {
+    position:absolute;
+    left:0;
+    top:0;
+    bottom:0;
+    right:0;
+  }
 }
