--- a/site/templates/src/less/contacts.less
+++ b/site/templates/src/less/contacts.less
@@ -44,6 +44,13 @@
       left:0;
     }
   }
+  &__map {
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+  }
   &__name {
     font-size:18px;
     margin-top:30px;
