--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -69,8 +69,8 @@
   }
   &.is_focused label,
   &.is_filled label {
-    font-size:10px;
-    top:-15px;
+    font-size:12px;
+    transform:translateY(-20px);
   }
 }
 .form__element {
@@ -140,8 +140,8 @@
     border-radius: 0;
     font-family: "Oswald",arial,sans-serif;
     font-weight: 500;
-    font-size: 48px;
-    line-height: 71px;
+    font-size: 36px;
+    line-height: 48px;
     padding-bottom:15px;
     width: 100%;
     box-sizing: border-box;
@@ -179,8 +179,8 @@
     padding-bottom:15px;
     font-family: "Oswald",arial,sans-serif;
     font-weight: 500;
-    font-size: 48px;
-    line-height: 71px;
+    font-size: 36px;
+    line-height: 48px;
     box-sizing: border-box;
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
@@ -188,8 +188,8 @@
   }
   &.is_focused label,
   &.is_filled label {
-    font-size:10px;
-    top:-15px;
+    font-size:12px;
+    transform:translateY(-20px);
   }
 }
 .form__element_brief {
