--- a/site/templates/src/less/contacts.less
+++ b/site/templates/src/less/contacts.less
@@ -90,6 +90,10 @@
       top:50%;
       left:50%;
       transform:translate(-50%,-50%);
+      transition:all 0.3s;
+    }
+    &:hover:before {
+      color:#ea4335;
     }
     &_vk:before {
       content:"\f189";
