checkpoint lil changes

--- a/site/templates/src/less/contacts.less
+++ b/site/templates/src/less/contacts.less
@@ -93,7 +93,7 @@
       transition:all 0.3s;
     }
     &:hover:before {
-      color:#ea4335;
+      background-color:#ea4335;
     }
     &_vk:before {
       content:"\f189";
