--- a/site/templates/src/less/button.less
+++ b/site/templates/src/less/button.less
@@ -9,4 +9,10 @@
   line-height: bold;
   display:inline-block;
   text-align: center;
+  transition:all 0.2s;
+  &:hover {
+    color:white;
+    background-color:black;
+
+  }
 }
