--- a/site/templates/src/less/cases.less
+++ b/site/templates/src/less/cases.less
@@ -14,7 +14,7 @@
     width:60px;
     height:60px;
     border-radius: 50%;
-    background-color:rgba(255,0,0,0.8);
+    background-color:#ea4335;
     &:before {
       content:"";
       position:absolute;
