--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -32,6 +32,10 @@ strong {
 a {
   text-decoration: none;
   color:black;
+  transition:all 0.2s;
+  &:hover {
+    color:#ea4335;
+  }
 }
 a,input,button {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
