--- a/site/templates/src/less/work.less
+++ b/site/templates/src/less/work.less
@@ -54,7 +54,7 @@
     width:485px;
     height:992px;
     transform:translate(-50%,-50%);
-    & .active path {
+    & .is_active path {
       stroke:#67DCEC;
     }
   }
@@ -96,6 +96,10 @@
   }
 }
 
-.scheme {
-
+.svg {
+  &__group {
+    &.is_active path {
+      stroke:#67DCEC;
+    }
+  }
 }
