--- a/site/templates/src/less/cases.less
+++ b/site/templates/src/less/cases.less
@@ -25,7 +25,7 @@
       background-position: 50% 50%;
       background-size:contain;
       background-repeat: no-repeat;
-      background-image:url('../img/arrow.svg');
+      background-image:url('../img/arrowwhite.svg');
       transform:translate(-50%,-50%);
     }
     &_left {
