--- a/site/templates/src/uikit/less/uikit.less
+++ b/site/templates/src/uikit/less/uikit.less
@@ -53,3 +53,4 @@
 @import "components/slideshow.less";
 @import "components/dotnav.less";
 @import "components/slidenav.less";
+@import "components/slider.less";
