--- a/site/templates/src/less/cases.less
+++ b/site/templates/src/less/cases.less
@@ -1,8 +1,21 @@
 .cases {
-  height:100vh;
-  display:flex;
-  flex-wrap: wrap;
-  overflow:hidden;
+  position:relative;
+  &__slider {
+    height:100vh;
+  }
+  &__slide {
+    height:100%;
+  }
+  &__list {
+    height:100vh;
+    display:flex;
+    flex-wrap: wrap;
+    overflow:hidden;
+  }
+  &__trigger {
+    position:absolute;
+    bottom:50%;
+  }
   &__case {
     box-sizing: border-box;
     display:inline-block;
@@ -46,13 +59,13 @@
 .case-block {
   position:relative;
   height:100%;
-  width:50%;
+  // width:50%;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
-  @media(max-width: 767px) {
-    width:100%;
-  }
+  // @media(max-width: 767px) {
+  //   width:100%;
+  // }
   &__heading {
     color:white;
     position:absolute;
