--- a/site/templates/src/less/cases.less
+++ b/site/templates/src/less/cases.less
@@ -27,7 +27,7 @@
     width:60px;
     height:60px;
     border-radius: 50%;
-    background-color:#ea4335;
+    background-color:#fd4d4f;
     &:before {
       content:"";
       position:absolute;
