--- a/site/templates/src/less/proposal.less
+++ b/site/templates/src/less/proposal.less
@@ -20,9 +20,9 @@
   }
   &__image {
     position:fixed;
-    left:50%;
+    left:~"calc(50% + 30px)";
     top:0;
-    width:50%;
+    width:~"calc(50% - 30px)";
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
