--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -25,6 +25,9 @@
 //HACKKKK
 body {
   overflow-y: scroll;
+  @media(min-width: 1024px) {
+    padding-left: 60px;
+  }
 }
 strong {
   font-weight: 700;
