--- a/site/templates/src/less/contacts.less
+++ b/site/templates/src/less/contacts.less
@@ -6,6 +6,15 @@
   &__cell {
     box-sizing: border-box;
     &_left {
+      width:33.3333%;
+      @media(max-width: 1023px) {
+        width:50%;
+      }
+      @media(max-width: 767px) {
+        width:100%;
+      }
+    }
+    &_right {
       width:66.6667%;
       @media(max-width: 1023px) {
         width:50%;
@@ -15,28 +24,19 @@
         width:100%;
       }
     }
-    &_right {
-      width:33.3333%;
-      @media(max-width: 1023px) {
-        width:50%;
-      }
-      @media(max-width: 767px) {
-        width:100%;
-      }
-    }
   }
   &__image {
     position:fixed;
-    left:0;
+    left:~"calc(33.3333% + 40px)";
     top:0;
-    width:66.6667%;
+    width:~"calc(66.6667% - 40px)";
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
     height:100vh;
     @media(max-width: 1023px) {
-      width:50%;
-      left:50%;
+      width:~"calc(50% - 20px)";
+      left:~"calc(50% + 20px)";
     }
     @media(max-width: 767px) {
       width:100%;
