--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -80,6 +80,10 @@
   &_submit { margin-top: 20px;}
 }
 .form__radio {
+  label {
+    display:block;
+    max-width: 100%;
+  }
   &+* {
     margin-top: 14px;
   }
