--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -4,43 +4,16 @@
   position:absolute;
   top:0;
   left:0;
-  right:50%;
-  padding:60px 60px 0 60px;
+  height:100%;
+  background-color:#fd4d4f;
+  position:fixed;
   @media(max-width:767px) {
-    padding:20px 20px 0 20px;
-    justify-content: flex-end;
     right:0;
   }
-  &_fixed {
-    position:fixed;
-  }
-  &_work {
-    left:40%;
+  @media(max-width: 1023px) {
+    left:0;
+    top:0;
     right:0;
-    @media(min-width: 1440px) {
-      left: 50%;
-    }
-    @media(max-width: 1023px) {
-      left:0;
-    }
-  }
-  &_contacts {
-    left: 66.6667%;
-    right:0;
-    @media(max-width: 1023px) {
-      left:0;
-      right:0;
-    }
-  }
-  &_about {
-    left:33.3333%;
-    right:0;
-    @media(min-width: 1920px) {
-      left: 50%;
-    }
-    @media(max-width: 1023px) {
-      left:0;
-      position:fixed;
-    }
+    height:auto;
   }
 }
