hotfix for socials

--- a/site/templates/src/less/contacts.less
+++ b/site/templates/src/less/contacts.less
@@ -92,7 +92,7 @@
       transform:translate(-50%,-50%);
       transition:all 0.3s;
     }
-    &:hover:before {
+    &:hover {
       background-color:#ea4335;
     }
     &_vk:before {
