--- a/site/templates/src/less/form.less
+++ b/site/templates/src/less/form.less
@@ -70,7 +70,8 @@
   &.is_focused label,
   &.is_filled label {
     font-size:12px;
-    transform:translateY(-20px);
+    transform:translateY(-25px);
+    padding-bottom:0;
   }
 }
 .form__element {
@@ -193,7 +194,8 @@
   &.is_focused label,
   &.is_filled label {
     font-size:12px;
-    transform:translateY(-20px);
+    transform:translateY(-25px);
+    padding-bottom:0;
   }
 }
 .form__element_brief {
