hotfix sidebar+overlay

--- a/site/templates/src/less/sidebar.less
+++ b/site/templates/src/less/sidebar.less
@@ -1,6 +1,7 @@
 .sidebar {
   box-sizing: border-box;
   padding: 60px;
+  padding-bottom:120px;
   max-width: 330px;
   &__items {
     margin-top:80px;
