--- a/site/templates/src/less/main.less
+++ b/site/templates/src/less/main.less
@@ -133,6 +133,11 @@
     @media(max-width: 767px) {
       width:100%;
     }
+    @media(max-width: 1023px) {
+      &>* {
+        opacity: 1;
+      }
+    }
     &:hover {
       &>* {
         opacity: 1;
@@ -140,7 +145,7 @@
     }
   }
   &__overlay {
-    background-color:rgba(0,0,0,0.7);
+    background-color:rgba(0,0,0,0.5);
     position:absolute;
     left:0;
     top:0;
