--- a/site/templates/src/less/case.less
+++ b/site/templates/src/less/case.less
@@ -16,7 +16,7 @@
       }
     }
     &_text {
-      padding:90px 60px;
+      padding:60px;
       @media(max-width: 767px) {
         padding:60px 20px;
       }
