фикс главной страницы

--- a/site/templates/src/less/main.less
+++ b/site/templates/src/less/main.less
@@ -60,8 +60,6 @@
 
 .aside {
   padding:60px;
-  display:flex;
-  flex-wrap: wrap;
   text-align: center;
   justify-content: center;
 
@@ -95,6 +93,8 @@
   }
   &__slogan{
     max-width: 350px;
+    margin-left:auto;
+    margin-right:auto;
     margin-top:15px;
     font-size: 24px;
     @media(min-width: 1440px) {
