--- a/site/templates/src/less/header.less
+++ b/site/templates/src/less/header.less
@@ -5,7 +5,8 @@
   top:0;
   left:0;
   height:100%;
-  background-color:#fd4d4f;
+  // background-color:#fd4d4f;
+  background-color:white;
   position:fixed;
   @media(max-width:767px) {
     right:0;
