--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -174,11 +174,17 @@
 
   }
   &__button {
-    margin-top:30px;
+    display:flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top:45px;
     @media(min-width: 1920px) {
-      margin-top:60px;
+      margin-top:75px;
     }
-
+    &>* {
+      margin-left: 30px;
+      margin-top:15px;
+    }
   }
   &__items {
     position:absolute;
