--- a/site/templates/src/uikit/less/components/slider.less
+++ b/site/templates/src/uikit/less/components/slider.less
@@ -31,7 +31,7 @@
 /*
  * RTL Compatibility
  */
- 
+
 [data-uk-slider] { direction: ltr; }
 
 html[dir="rtl"] .uk-slider > * { direction: rtl; }
@@ -85,8 +85,8 @@ html[dir="rtl"] .uk-slider > * { direction: rtl; }
  */
 
 .uk-slider:not(.uk-drag) {
-    -webkit-transition: -webkit-transform 200ms linear;
-    transition: transform 200ms linear;
+    -webkit-transition: -webkit-transform 400ms ease-out;
+    transition: transform 400ms ease-out;
 }
 
 /*
