всякие прочие фиксы

--- a/site/templates/src/less/style.less
+++ b/site/templates/src/less/style.less
@@ -24,9 +24,10 @@
 }
 //HACKKKK
 body {
-  overflow-y: scroll;
+  overflow-y: scroll !important;
   @media(min-width: 1024px) {
-    padding-left: 60px;
+    padding-left: 60px !important;
+    padding-right:0 !important;
   }
 }
 strong {
