--- a/site/templates/src/less/about.less
+++ b/site/templates/src/less/about.less
@@ -36,9 +36,9 @@
   }
 
   &__items {
-    margin-top:150px;
+    margin-top:90px;
     @media(min-width: 1920px) {
-      margin-top:170px;
+      margin-top:120px;
     }
     @media(max-width: 767px) {
       margin-top:0;
@@ -82,7 +82,7 @@
     padding:100px 60px 60px 60px;
     @media(min-width:1440px) {
       padding-bottom:100px;
-      padding-top:200px
+      padding-top:120px
     }
     @media(max-width: 767px) {
       padding:60px 20px;
@@ -97,7 +97,10 @@
   }
   &__cell {
     box-sizing: border-box;
-    width:33.3333%;
+    width:25%;
+    @media(min-width: 1440px) {
+      width:20%;
+    }
     @media(max-width: 767px) {
       width:50%;
     }
