--- a/site/templates/src/less/sertificates.less
+++ b/site/templates/src/less/sertificates.less
@@ -11,7 +11,7 @@
     padding:100px 60px 60px 60px;
     @media(min-width:1440px) {
       padding-bottom:100px;
-      padding-top:200px
+      padding-top:120px
     }
     @media(max-width: 767px) {
       padding:60px 20px;
@@ -20,11 +20,22 @@
   }
   &__slider {
     padding:0 250px;
+    position:relative;
     @media(max-width: 959px) {
       padding: 0 100px;
     }
     @media(max-width: 767px) {
       padding:0;
+    }
+    &:before {
+      content:"";
+      position:absolute;
+      z-index:-1;
+      width:100%;
+      height:110%;
+      top:50%;
+      left:0;
+      transform:translateY(-50%);
     }
   }
   &__nav {
