--- a/site/templates/src/less/sertificates.less
+++ b/site/templates/src/less/sertificates.less
@@ -1,5 +1,24 @@
 .sertificates {
   padding-bottom:120px;
+  position:relative;
+  &:after {
+    position:absolute;
+    content:"";
+    top:60px;
+    left:0;
+    right:0;
+    bottom:0;
+    z-index:-1;
+    background-color:#eee;
+    @media(max-width: 1439px) {
+      padding-bottom:40px;
+      padding-top:40px;
+    }
+    @media(max-width: 767px) {
+      top:0;
+      bottom:0;
+    }
+  }
   .uk-grid {
     display:flex;
     >* {
@@ -20,22 +39,11 @@
   }
   &__slider {
     padding:0 250px;
-    position:relative;
     @media(max-width: 959px) {
       padding: 0 100px;
     }
     @media(max-width: 767px) {
       padding:0;
-    }
-    &:before {
-      content:"";
-      position:absolute;
-      z-index:-1;
-      width:100%;
-      height:110%;
-      top:50%;
-      left:0;
-      transform:translateY(-50%);
     }
   }
   &__nav {
