--- a/site/templates/src/less/service.less
+++ b/site/templates/src/less/service.less
@@ -143,8 +143,15 @@
     margin-top:15px;
     display:inline-block;
     border-bottom:2px solid #00BCD6;
+    &:hover {
+      color:black;
+      border-color:black;
+    }
     @media(min-width: 1920px) {
-      margin-top:20px;
+      // margin-top:20px;
+    }
+    &_price {
+      margin-top:30px;
     }
 
     &_content {
