добавил кнопку в прайсы

--- a/site/templates/src/less/review.less
+++ b/site/templates/src/less/review.less
@@ -8,7 +8,9 @@
     left:60px;
     top:181px;
     opacity:0;
+    z-index:-1;
     &.active {
+      z-index:1;
       opacity:1;
       transition:all 0.4s;
     }
