--- a/site/templates/src/less/prices.less
+++ b/site/templates/src/less/prices.less
@@ -67,6 +67,67 @@
   }
 }
 
+.background-proposal {
+  position:absolute;
+  left:20px;
+  top:20px;
+  right:20px;
+  bottom:20px;
+  border:3px solid #fff;
+  overflow:hidden;
+  &__glass {
+    position:absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    margin:-23px;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size:cover;
+    filter:blur(10px);
+  }
+  &__panel {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    width: 100%;
+    max-width: 300px;
+  }
+  &__heading {
+    color:white;
+    text-align: center;
+  }
+  &__text {
+    margin-top:15px;
+    color:white;
+    font-size:16px;
+    line-height: 28px;
+    text-align: center;
+  }
+  &__button {
+    padding-top:90px;
+    margin-top:30px;
+    top:50%;
+    color:white;
+    text-align: center;
+    font-size:14px;
+    line-height: 19px;
+    display:block;
+    text-transform: uppercase;
+    background-image: url(../img/circle-arrow.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size:75px 75px;
+    font-weight: 700;
+    &:hover {
+      color:white;
+      text-decoration: underline;
+    }
+  }
+}
+
 .prices-block {
   height:100%;
   padding-bottom:80px;
